--- a/src/components/ProductsList/styles/products_list.sass
+++ b/src/components/ProductsList/styles/products_list.sass
@@ -49,9 +49,11 @@
         .pc-container
             width: 100%
             display: flex
+            margin-top: $m32
 
         .product-swiper-2
             width: 100%
+            display: flex !important
 
     .product-swiper
         display: none !important
