--- a/src/pages/MainPage/styles/main_page.sass
+++ b/src/pages/MainPage/styles/main_page.sass
@@ -117,3 +117,5 @@
             padding-left: $m16tab
             margin-top: $m32tab
             margin-bottom: $m64tab
+
+@media (min-width: 1024px)
