--- a/src/components/ProductsList/ProductCard/styles/product_card.css
+++ b/src/components/ProductsList/ProductCard/styles/product_card.css
@@ -255,7 +255,7 @@
 }
 @media (min-width: 1024px) {
   .product-card {
-    width: 300px;
+    width: clamp(170px, 17.7072vw, 680px);
     height: auto;
     height: auto;
     display: flex;
