--- a/src/components/ProductsList/styles/products_list.css
+++ b/src/components/ProductsList/styles/products_list.css
@@ -44,9 +44,11 @@
   .products-list .pc-container {
     width: 100%;
     display: flex;
+    margin-top: clamp(16px, 1.66656vw, 64px);
   }
   .products-list .product-swiper-2 {
     width: 100%;
+    display: flex !important;
   }
   .product-swiper {
     display: none !important;
