--- a/src/components/TopList/styles/top_list.sass
+++ b/src/components/TopList/styles/top_list.sass
@@ -7,6 +7,9 @@
     flex-direction: column
     margin-top: clamp(24px,11.21472vw,96px)
 
+    .tablet-top-list, .pc-top-list
+        display: none
+
     .top-swiper
         width: 100%
         height: auto
@@ -18,6 +21,9 @@
         .swiper-wrapper
             display: flex
             flex-direction: row
+
+    .top-swiper-pc
+        display: none
 
 @media (min-width: 768px) and (max-width: 1024px)
 
@@ -38,3 +44,16 @@
             align-items: center
             justify-content: space-between
             margin-top: $m32tab
+
+@media (min-width: 1024px)
+
+    .tablet-top-list
+        display: none
+
+    .pc-top-list
+        width: 100%
+        height: auto
+        display: flex
+
+        .top-swiper-pc
+            display: flex
