--- a/src/components/TrendingList/styles/trending_list.sass
+++ b/src/components/TrendingList/styles/trending_list.sass
@@ -7,9 +7,12 @@
     flex-direction: column
     margin-top: clamp(24px,11.21472vw,96px)
 
+    .trending-list-tablet, .trending-list-pc
+        display: none
+
     .trending-swiper
         width: 100%
-        display: flex
+        display: flex !important
         align-items: center
         margin-top: clamp(12px,5.60736vw,48px)
 
@@ -29,3 +32,16 @@
             display: flex
             flex-direction: column
             margin-top: $m64tab
+
+@media (min-width: 1024px)
+
+    .trending-list
+
+        .trending-list-tablet, .trending-swiper
+            display: none !important
+
+        .trending-list-pc
+            width: 100%
+            display: flex
+            justify-content: space-between
+            margin-top: $m32
