--- a/src/styles/global/global.sass
+++ b/src/styles/global/global.sass
@@ -224,7 +224,7 @@
         display: none
 
     .pc-container
-        display: flex
+        display: flex !important
 
     .chevron-icon
         font-size: $font16 !important
