--- a/src/components/TopList/TopCard/styles/top_card.sass
+++ b/src/components/TopList/TopCard/styles/top_card.sass
@@ -191,8 +191,8 @@
         flex-direction: column
         align-items: flex-start
         margin: auto
-        margin-top: clamp(10px,4.6728vw,40px)
-        margin-bottom: clamp(10px,4.6728vw,40px)
+        margin-top: clamp(10px,1.0416vw,40px)
+        margin-bottom: clamp(10px,1.0416vw,40px)
 
         .upper-content
             width: 100%
@@ -212,7 +212,7 @@
                     color: $primary_gray
                     font-feature-settings: 'clig' off, 'liga' off
                     font-family: Lato
-                    font-size: clamp(6px,2.80368vw,24px)
+                    font-size: clamp(6px,0.62496vw,24px)
                     font-style: normal
                     font-weight: 700
                     line-height: 166.667%
@@ -221,19 +221,19 @@
                     color: $secondary_text
                     font-feature-settings: 'clig' off, 'liga' off
                     font-family: Lato
-                    font-size: clamp(5px,2.3364vw,20px)
+                    font-size: $font16
                     font-style: normal
                     font-weight: 400
                     line-height: 200%
 
             .heart-button
-                font-size: $font24mob
+                font-size: $font24
                 color: #28303F
                 border: none
                 background-color: transparent
 
             .heart-button-active
-                font-size: $font24mob
+                font-size: $font24
                 color: #FF477E
                 border: none
                 background-color: transparent
@@ -241,33 +241,33 @@
         .rating-container
             display: flex
             align-items: center
-            margin-top: clamp(6px,2.80368vw,24px)
+            margin-top: clamp(6px,0.62496vw,24px)
 
             .rating
                 color: $star
-                font-size: $font20mob
+                font-size: $font20
 
             .rating-quantity
                 color: $secondary_text
                 text-align: center
                 font-feature-settings: 'clig' off, 'liga' off
                 font-family: Lato
-                font-size: $font12mob
+                font-size: clamp(10px,1.0416vw,40px)
                 font-style: normal
                 font-weight: 400
                 line-height: 208.333%
-                margin-left: clamp(6px,2.80368vw,24px)
+                margin-left: clamp(6px,0.62496vw,24px)
 
         .price-container
             display: flex
             align-items: center
-            margin-top: clamp(6px,2.80368vw,24px)
-            margin-bottom: clamp(6px,2.80368vw,24px)
+            margin-top: clamp(6px,0.62496vw,24px)
+            margin-bottom: clamp(6px,0.62496vw,24px)
 
             .current-price
                 color: $discount
                 font-family: Lato
-                font-size: $font14mob
+                font-size: $font14
                 font-style: normal
                 font-weight: 700
                 line-height: 142.857%
@@ -275,20 +275,20 @@
             .original-price
                 color: $secondary_text
                 font-family: Lato
-                font-size: $font12mob
+                font-size: $font12
                 font-style: normal
                 font-weight: 400
                 line-height: 166.667%
                 text-decoration: line-through
                 text-decoration-line: strikethrough
-                margin-left: clamp(6px,2.80368vw,24px)
+                margin-left: clamp(6px,0.62496vw,24px)
 
             .discount
                 color: $discount
                 font-feature-settings: 'clig' off, 'liga' off
                 font-family: Lato
-                font-size: $font12mob
+                font-size: $font12
                 font-style: normal
                 font-weight: 400
                 line-height: 166.667%
-                margin-left: clamp(6px,2.80368vw,24px)
+                margin-left: clamp(6px,0.62496vw,24px)
