--- a/src/components/TopList/styles/top_list.sass
+++ b/src/components/TopList/styles/top_list.sass
@@ -50,10 +50,17 @@
     .tablet-top-list
         display: none
 
+    .top-swiper
+        display: none !important
+
     .pc-top-list
         width: 100%
         height: auto
-        display: flex
+        display: flex !important
+        margin-top: $m64
 
-        .top-swiper-pc
-            display: flex
+        .cards
+            display: flex !important
+            flex-direction: row
+            align-items: center
+            justify-content: space-between
