--- a/src/components/Spotlight/styles/spotlight.sass
+++ b/src/components/Spotlight/styles/spotlight.sass
@@ -80,3 +80,46 @@
 
         .spotlight-image
             height: 100%
+
+@media (min-width: 1024px)
+
+    .spotlight
+        width: clamp(400px,41.664vw,1600px) !important
+        height: clamp(220px,22.915200000000002vw,880px) !important
+        display: flex
+        margin-top: 0px !important
+
+        .spotlight-content
+            width: 90%
+            height: auto
+            margin-left: clamp(10px,2.3980815347721824vw,40px)
+
+            .category-heading
+                width: 70%
+                font-size: clamp(20px,2.0832vw,80px)
+                line-height: 127.778%
+
+            .sub-category-text
+                width: 50%
+                font-size: $font28
+                line-height: 128.571%
+                margin-top: $m16
+
+            .spotlight-button
+                display: flex
+                align-items: flex-start
+                font-size: $font24
+                font-feature-settings: 'clig' off, 'liga' off
+                font-family: Lato
+                font-style: normal
+                font-weight: 400
+                line-height: 200%
+                color: $white
+                text-decoration-line: underline
+                background-color: transparent
+                border: none
+                margin-top: $m16
+
+        .spotlight-image
+            width: 80%
+            height: 100%
