--- a/src/pages/MainPage/styles/main_page.sass
+++ b/src/pages/MainPage/styles/main_page.sass
@@ -119,3 +119,12 @@
             margin-bottom: $m64tab
 
 @media (min-width: 1024px)
+
+    .spotlight-row
+        width: 90%
+        display: flex
+        flex-direction: row !important
+        align-items: center
+        justify-content: space-between
+        margin: auto
+        margin-top: $m64tab !important
